--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,5 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.CasteljauTreeActivity"/>
+        <activity android:name=".activity.PointPickerActivity"/>
     </application>
 </manifest> 
