--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="net.mobilespirit.curvy"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="curvy" android:icon="@drawable/icon">
+    <application android:label="Curvy" android:icon="@drawable/icon" android:debuggable="true" android:name=".CurvyApplication">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -11,7 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.CasteljauTreeActivity"/>
         <activity android:name=".activity.PointPickerActivity"/>
+        <activity android:name=".activity.CasteljauTreeActivity"/>
     </application>
 </manifest> 
