--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,8 @@
       package="net.mobilespirit.curvy"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="Curvy" android:icon="@drawable/icon" android:debuggable="true" android:name=".CurvyApplication">
-        <activity android:name="MainActivity"
+    <application android:label="Curvy" android:icon="@drawable/icon" android:debuggable="true" >
+        <activity android:name=".activity.MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
